<resources>
    <string name="app_name">Booxchange</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_my_library">MyLibrary</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_menu">MENU</string>
    <string name="title_profile">My Profile</string>
    <string name="title_messages">My Messages</string>
    <string name="title_library">My Library</string>
    <string name="title_offers">Offers</string>
    <string name="title_settings">App Settings</string>
    <string name="title_logout">Logout</string>
    <string name="label_for_trade">For trade</string>
    <string name="label_or">or</string>
    <string name="data_fetch_failed">Failed to load requested data</string>
    <string name="trade">TRADE</string>
    <string name="sale">SALE</string>
    <string name="label_search">Search</string>
    <string name="facebook_app_id">541516282914515</string>
    <string name="fb_login_protocol_scheme">fb541516282914515</string>
    <string name="google_web_client_id">1025961224603-amrs43d2vaurq6ilhutq9c8g7a9sm8hp.apps.googleusercontent.com</string>
    <string name="enter_phone">Phone number</string>
    <string name="sign_in_phone">Sign in with phone</string>
    <string name="sign_in_alternative">or connect with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="information">Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="university">University</string>
    <string name="year">Year</string>
    <string name="study_programme">Study Programme</string>
    <string name="app_settings">App Settings</string>
    <string name="push_notifications">Push notifications</string>
    <string name="connect_with_fb">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="connect_with_phone">Connect with Phone</string>
    <string name="gallery">Gallery</string>
    <string name="profile_photo_txt">Profile Photo</string>
    <string name="camera">Camera</string>
    <string name="termsConditions">Terms &amp; Conditions</string>
    <string name="edition">Edition: %s</string>
    <string name="price">Price: €%s</string>
    <string name="privacyPolicy">By signing up, I accept the\n<u>Terms of Service</u> and <u>Privacy Policy</u></string>

    <string name="netherlands_country_code" translatable="false">+31</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="more">more</string>
    <string name="less">less</string>

    <string name="cancel">Cancel</string>
    <string name="edit_book">Edit book</string>
</resources>
