<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo_txt"
            android:textColor="@color/dustyGray"
            android:fontFamily="@font/pt_sans"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/upload_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/profile_top_border"
            android:fontFamily="@font/pt_sans"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/mountainMeadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/take_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_top_border"
            android:fontFamily="@font/pt_sans"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/mountainMeadow"
            app:layout_constraintTop_toBottomOf="@id/upload_photo_button" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>