<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|right"
        android:paddingRight="20dp"
        android:text="@string/title_menu"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/go_to_homepage_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book_open_variant"
            android:tint="@color/whiteGray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/title_offers"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/go_to_profile_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account"
            android:tint="@color/whiteGray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/title_profile"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/go_to_messages_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/comment"
            android:tint="@color/whiteGray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/title_messages"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/go_to_library_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book"
            android:tint="@color/whiteGray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical|right"
            android:text="@string/title_library"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/go_to_logout_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout"
            android:tint="@color/whiteGray"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical|right"
            android:text="@string/title_logout"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>
