<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/dialog_design"
    android:gravity="bottom">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/profile_photo_txt"
        android:textColor="@color/dustyGray"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:fontFamily="@font/pt_sans"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/pt_sans"
        android:text="@string/camera"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:textColor="@color/darkGreen"
        app:layout_constraintTop_toBottomOf="@id/gallery_photo_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/midGray"
        app:layout_constraintBottom_toTopOf="@id/gallery_photo_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/midGray"
        app:layout_constraintBottom_toTopOf="@id/camera_photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_photo_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
