<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/sign_in_activity_background">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/lightGray"
            app:layout_constraintVertical_bias="0.04"
            app:srcCompat="@drawable/logo_icon" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textColor="@color/lightGray"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/app_logo"
            app:layout_constraintLeft_toRightOf="@+id/app_logo"
            app:layout_constraintTop_toTopOf="@+id/app_logo" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="75dp"
            android:layout_height="8dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@+id/app_logo"
            app:layout_constraintRight_toRightOf="@+id/app_logo"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone_number_field"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/sign_in_round_label"
            android:hint="@string/enter_phone"
            android:textSize="18dp"
            android:fontFamily="@font/pt_sans"
            android:inputType="phone|textNoSuggestions"
            android:maxWidth="300dp"
            android:paddingLeft="100dp"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="300dp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/phone_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:tint="@color/lightGray"
            app:layout_constraintBottom_toBottomOf="@+id/phone_number_field"
            app:layout_constraintLeft_toLeftOf="@+id/phone_number_field"
            app:layout_constraintTop_toTopOf="@+id/phone_number_field"
            app:srcCompat="@drawable/ic_phone" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/country_code_field"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:textSize="18dp"
            android:background="#00000000"
            android:textColor="@color/lightGray"
            android:inputType="phone|textNoSuggestions"
            app:layout_constraintBottom_toBottomOf="@+id/phone_number_field"
            app:layout_constraintLeft_toRightOf="@+id/phone_icon"
            app:layout_constraintTop_toTopOf="@+id/phone_number_field"
            tools:text="+373" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/phone_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="30dp"
            android:background="@drawable/sign_in_round_btn"
            android:maxWidth="300dp"
            android:textSize="16dp"
            android:text="@string/sign_in_phone"
            android:textColor="@color/lightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_field"
            app:layout_constraintWidth_max="300dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/or_sign_in_with_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/sign_in_alternative"
            android:textColor="@color/lightGray"
            android:textSize="13dp"
            app:layout_constraintLeft_toLeftOf="@+id/phone_sign_in_button"
            app:layout_constraintRight_toRightOf="@+id/phone_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/phone_sign_in_button" />

        <View
            android:id="@+id/little_line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/whiteGray"
            app:layout_constraintBottom_toBottomOf="@id/or_sign_in_with_label"
            app:layout_constraintEnd_toStartOf="@id/or_sign_in_with_label"
            app:layout_constraintStart_toStartOf="@+id/facebook_sign_in_button"
            app:layout_constraintTop_toTopOf="@id/or_sign_in_with_label" />

        <View
            android:id="@+id/little_line2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:background="@color/whiteGray"
            app:layout_constraintBottom_toBottomOf="@id/or_sign_in_with_label"
            app:layout_constraintEnd_toEndOf="@+id/google_sign_in_button"
            app:layout_constraintStart_toEndOf="@id/or_sign_in_with_label"
            app:layout_constraintTop_toTopOf="@id/or_sign_in_with_label" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/google_sign_in_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_transparent"
            android:padding="17dp"
            app:layout_constraintRight_toRightOf="@+id/phone_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with_label"
            app:srcCompat="@drawable/ic_google_logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/google_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/google"
            android:textColor="@color/lightGray"
            app:layout_constraintLeft_toLeftOf="@+id/google_sign_in_button"
            app:layout_constraintRight_toRightOf="@+id/google_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_transparent"
            android:padding="17dp"
            app:layout_constraintLeft_toLeftOf="@+id/phone_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with_label"
            app:srcCompat="@drawable/ic_facebook_logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fb_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/facebook"
            android:textColor="@color/lightGray"
            app:layout_constraintLeft_toLeftOf="@+id/facebook_sign_in_button"
            app:layout_constraintRight_toRightOf="@+id/facebook_sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_button" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
